load("@bazel_skylib//:bzl_library.bzl", "bzl_library")
load("@rules_venv//python:defs.bzl", "py_library")

exports_files([
    "pylint_runner.py",
])

py_library(
    name = "pylint_runner",
    srcs = ["pylint_runner.py"],
    visibility = ["//visibility:public"],
    deps = [
        "//python/pylint:current_py_pylint_toolchain",
        "@rules_venv//python/runfiles",
    ],
)

bzl_library(
    name = "bzl_lib",
    srcs = glob(["*.bzl"]),
    visibility = ["//python/pylint:__subpackages__"],
    deps = [
        "@rules_venv//python:bzl_lib",
        "@rules_venv//python/venv:bzl_lib",
    ],
)
